# MIT-MUQ

./: .gitignore  BuildAllExamples.sh  BuildAllParallelExamples.sh  CMakeLists.txt  RunAllNotebooks.sh  bitbucket-pipelines.yml  output.txt  readme.md
.github/workflow/: build_and_test.yaml
.github/workflows/: .linux_build_and_test.yaml  build_and_test.yaml  deploy_docs  deploy_docs.yaml  documentation.yaml  jupyter_ci.yaml  linux_build_and_test.yaml  linux_ci.yaml  mac_build_and_test.yaml  test.yaml
MUQ/: config.h.in
MUQ/Modeling/: LinearSDE.h  WorkGraphPiece.h
MUQ/Optimization/: CostFunction.h  ModPieceCostFunction.h  NLoptOptimizer.h  NewtonTrust.h  Optimizer.h
MUQ/SamplingAlgorithms/: Diagnostics.h  GreedyMLMCMC.h  InfMALAProposal.h  InferenceProblem.h  MIMCMC.h  MIMCMCBox.h  MarkovChain.h  MultiIndexEstimator.h  ParallelMIMCMCWorker.h  ParallelTempering.h  SampleCollection.h  SampleEstimator.h  Sampling.h  SamplingAlgorithm.h  SamplingProblem.h  SamplingState.h  SingleChainMCMC.h
MUQ/Utilities/: Demangler.h  OTF2Tracer.h
SupportScripts/: basic_python.py  build_tpls.py  install-instructions.sh
cmake/: CompileGroup.cmake  DependencySearch.cmake  ExternalOptions.cmake  MUQConfig.cmake.in  MakeSummaryFile.cmake  OptionalDependencySearch.cmake  ProcessCompileGroups.cmake  RequiredDependencySearch.cmake  SetupCompileTargets.cmake  SetupCompiler.cmake  SetupOptions.cmake  SetupTestTargets.cmake  SetupmuqApproximation.cmake  SetupmuqInference.cmake  SetupmuqModeling.cmake  SetupmuqOptimization.cmake  SetupmuqSamplingAlgorithms.cmake  SetupmuqUtilities.cmake  UpdateCompileGroups.cmake
cmake/builds/: BuildBoost.cmake  BuildHDF5.cmake  BuildNANOFLANN.cmake  BuildPARCER.cmake  BuildSPECTRA.cmake
cmake/checks/: CheckHDF5.cmake  (+3 more)
documentation/: DoxygenLayout.xml  infrastructure.md  references.bib
examples/: CMakeLists.txt
examples/Approximation/GaussianProcess_CO2/: CMakeLists.txt  GaussianProcess_CO2.cpp
examples/Approximation/MonotoneRegression/: CMakeLists.txt  MonotoneRegression.cpp
examples/Modeling/CustomModPiece/cpp/: BasicModPiece.cpp  CMakeLists.txt
examples/Modeling/CustomModPiece/python/: DarcyFlow.ipynb  HeatEquation.ipynb
examples/Modeling/DockerModPiece/cpp/: CMakeLists.txt  DockerModPiece.cpp  DockerModPieceClient.cpp  Dockerfile  ExaHyPEModelGraph.h  HTTPComm.h  HTTPModPiece.h  HTTPModPieceClientMCMC.cpp  HTTPModPieceClientMCMCExaHyPE.cpp  HTTPModPieceClientParallelMLMCMCExaHyPE.cpp  HTTPModPieceClientTest.cpp  HTTPModPieceClientTest.py  HTTPModPieceClientTestExaHyPE.cpp  HTTPModPieceServer.cpp  HTTPModPieceServerExaHyPE.cpp  comm.h
examples/Modeling/FlowEquation/cpp/: CMakeLists.txt  FlowEquation.cpp
examples/Modeling/FlowEquation/python/: DarcyFlow.ipynb  meta.yml
examples/Modeling/HTTPModel/: CMakeLists.txt  FlowEquation.h  HTTPModelClient.cpp  HTTPModelServer.cpp  meta.yml
examples/Modeling/MemoryTest/cpp/: CMakeLists.txt
examples/Modeling/UMBridge/: CMakeLists.txt  FlowEquation.h  UMBridgeModelClient.cpp  UMBridgeModelServer.cpp
examples/Modeling/WorkGraphs/cpp/: CMakeLists.txt
examples/SamplingAlgorithms/MC/Example1_Gaussian/: CMakeLists.txt  MonteCarlo.cpp  MultilevelMonteCarlo.cpp
examples/SamplingAlgorithms/MCMC/BasicMetropolisInGibbs/cpp/: CMakeLists.txt
examples/SamplingAlgorithms/MCMC/CustomGaussianProposal/cpp/: CMakeLists.txt  CustomProposal.cpp
examples/SamplingAlgorithms/MCMC/DelayedRejection/python/: EllipticInference.py
examples/SamplingAlgorithms/MCMC/DimensionIndependence/: DimensionIndependence.ipynb
examples/SamplingAlgorithms/MCMC/DimensionIndependence/python/: meta.yml
examples/SamplingAlgorithms/MCMC/EllipticInference/cpp/: CMakeLists.txt  FlowEquation.h  InvariantSampling.cpp
examples/SamplingAlgorithms/MCMC/EllipticInference/python/: .gitignore  EllipticInference.ipynb  FlowEquation.py
examples/SamplingAlgorithms/MCMC/EllipticInference/python/DILI/: EllipticInference.ipynb
examples/SamplingAlgorithms/MCMC/EllipticInference/python/DelayedRejection/: EllipticInference.py
examples/SamplingAlgorithms/MCMC/Example1_Gaussian/cpp/: CMakeLists.txt  GaussianSampling.cpp
examples/SamplingAlgorithms/MCMC/Example1_Gaussian/python/: GaussianSampling.ipynb  meta.yml
examples/SamplingAlgorithms/MCMC/Example2_GaussianInverseGamma/cpp/: CMakeLists.txt
examples/SamplingAlgorithms/MCMC/Example3_MultilevelGaussian/cpp/: CMakeLists.txt  FullParallelMultilevelGaussianSampling.cpp  ModelParallelMultilevelGaussianSampling.cpp  MultilevelGaussianSampling.cpp  MultilevelMCMC_AdvancedInterface.cpp  MultilevelMCMC_BasicInterface.cpp  SubsamplingTestMultilevelGaussianSampling.cpp  meta.yml
examples/SamplingAlgorithms/MCMC/Example3_MultilevelGaussian/python/: MultilevelGaussianSampling.ipynb
examples/SamplingAlgorithms/MCMC/Example4_MultiindexGaussian/: MultiindexGaussianSampling.cpp
examples/SamplingAlgorithms/MCMC/Example4_MultiindexGaussian/cpp/: CMakeLists.txt  MultiindexGaussianSampling.cpp
examples/SamplingAlgorithms/MCMC/Example4_MultiindexGaussian/python/: MultiindexGaussianSampling.ipynb
examples/SamplingAlgorithms/MCMC/Example5_MALASampling/: CMakeLists.txt  MALASampler.cpp
examples/SamplingAlgorithms/MCMC/Example5_MultilevelExahype/: CMakeLists.txt  MultilevelExahype.cpp  calculateLikelihood.hh
examples/SamplingAlgorithms/MCMC/Example5_MultilevelGaussianSurrogates/cpp/: CMakeLists.txt  LAMCMC.cpp  LAMLMCMC.cpp  MCMCReference.cpp  MultilevelProblem.h
examples/SamplingAlgorithms/MCMC/MLDA/cpp/: MLDA.cpp  plot.ipynb
examples/SamplingAlgorithms/MCMC/MultilevelMCMC_FlowModel/cpp/: CMakeLists.txt  FlowEquation.cpp  FlowEquation.h  FlowModelComponents.cpp  MultilevelMCMC_FLowModel.cpp
examples/SamplingAlgorithms/MCMC/MultimodalSampling/: MultiModalSampling.ipynb  meta.yml
examples/SamplingAlgorithms/SampleGraphs/: GaussianDensityEstimation.ipynb
examples/Utilities/HDF5/BlockOperations/: CMakeLists.txt
examples/Utilities/HDF5/SimpleReadWrite/: CMakeLists.txt
joss/: paper.bib  paper.md
tmp/: CMakeLists.txt  test.cpp
website/: bitbucket-pipelines.yml  index.html
(+231 files in other folders)
