add_subdirectory(Approximation/GaussianProcess_CO2)
add_subdirectory(Approximation/MonotoneRegression)

add_subdirectory(Modeling/FlowEquation/cpp)
add_subdirectory(Modeling/UMBridge)

add_subdirectory(SamplingAlgorithms/MC/Example1_Gaussian)

add_subdirectory(SamplingAlgorithms/MCMC/Example1_Gaussian/cpp)
add_subdirectory(SamplingAlgorithms/MCMC/Example2_GaussianInverseGamma/cpp)
add_subdirectory(SamplingAlgorithms/MCMC/Example3_MultilevelGaussian/cpp)
add_subdirectory(SamplingAlgorithms/MCMC/Example4_MultiindexGaussian/cpp)

add_subdirectory(Utilities/HDF5/BlockOperations)
add_subdirectory(Utilities/HDF5/SimpleReadWrite)
